--- a/src/weather.css
+++ b/src/weather.css
@@ -50,6 +50,7 @@ body {
   width: 100%;
   padding-left: 2rem;
   font-family: cursive;
+  font-size: 1.2rem;
   border: 2px solid transparent;
   border-radius: 8px;
   outline: none;
